<resources>
    <string name="app_name">Der wahre Walter</string>
    <string name="MainMenu">Hauptmenue</string>
    <string name="newGame">Neues Spiel</string>
    <string name="existingGame">bestehendes Spiel</string>
    <string name="gameSettings">Einstellungen</string>
    <string name="exitGame">Speil beenden</string>
    <string name="exit">beenden</string>
    <string name="joinGame">Spiel beitreten</string>
    <string name="yeas">Ja</string>
    <string name="no">Nein</string>
    <string name="dialog_exit">Spiel beenden?</string>
    <string name="playername">Wähle einen Namen</string>
    <string name="yourplayername">X you X</string>
    <string name="addplayer">Spieler hinzufuegen</string>
    <string name="invite_friend">Freund einladen</string>
    <string name="dialog_exit_mesage">bis du dir sicher, dass du das Spiel beenden möchtest?</string>
    <string name="welcome">Wilkommen bei</string>
    <string name="login">Login </string>
    <string name="logout">Ausloggen </string>
    <string name="pw">Passwort</string>
    <string name="register">Register</string>
    <string name="change_pw">Change Password</string>
    <string name="cancelpw">Cancel</string>
    <string name="requestnewpw">Request New Password</string>
    <string name="requestnewpwcode">Request New Password Code</string>
    <string name="forgotpw">Passwort vergessen</string>
    <string name="forgotpw_message">Bitte geben Sie ihre E-Mail-Adresse an.</string>
    <string name="request_new_password">Neues Password anfordern</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="code_404">404</string>
    <string name="code_0">0</string>
    <string name="server_response">1</string>
    <string name="server_message">Successfully connected</string>
    <string name="registered">Successfully registered</string>
    <string name="loginfailed">Login failed. Try again!</string>
    <string name="gamename">Name der neuen Runde.</string>
    <string name="startgame">Spiel starten</string>
    <string name="startgameback">Zurück</string>
    <string name="unknow_error">Ups da ist was schief gegangen</string>
    <string name="unknow_email">"Benutzer mit dieser EMail nicht vorhanden"</string>
    <string name="send_email">"Ihnen wurde eine Email zugeschickt"</string>

</resources>
