<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_big" />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/frame_inputtext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/margin"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/loginpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/frame_inputtext"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/margin"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_big_big">

        <Button
            android:id="@+id/login_btn"
            style="@style/Button_Medium"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/login" />

        <Button
            android:id="@+id/register_btn"
            style="@style/Button_Medium"
            android:layout_gravity="center|top"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/register" />

        <Button
            android:id="@+id/forgotpw_btn"
            style="@style/Button_Medium"
            android:layout_gravity="center|top"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/forgotpw" />
    </LinearLayout>
</LinearLayout>