<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/forgotpw"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/forgotpw_message"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/frame_inputtext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/margin"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/request_password_btn"
        style="@style/Button_Medium"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/request_new_password" />

</LinearLayout>
